--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <h1 style="color:green;">students</h1>
-<p> students life is golden life </p>
+  <p> students life is <il>golden life</il> </p>
 
 <img src="" alt="">
 <button>singin</button>
@@ -10,5 +10,5 @@
 <a href="">name</a>
 <style= "color:red">
 <mark>html</mark>
-<h2>welcome</h2>
+<h2><em>welcome</em></h2>
 </html>
